# elastic-serverless-forwarder

./: .coveragerc  .editorconfig  .flake8  .gitignore  CHANGELOG.asciidoc  CHANGELOG.md  CLAUDE.md  CONTRIBUITING.md  CONTRIBUTING.md  Makefile  NOTICE.txt  README.md  main.py  main_aws.py  mypy.ini  parse_notice.py  publish_lambda.sh  pyproject.toml  pytest.ini  requirements-lint.txt  requirements-tests.txt  requirements.txt
.ci/: Jenkinsfile
.ci/jobs/: defaults.yml  elastic-serverless-agent-mbp.yml  library.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: Cargo.toml  build.rs  fields.ron  pyproject.toml
backend/python/backend/: __init__.py
backend/scripts/: main.py
backend/src/: convert.rs  error.rs  lib.rs
dev-corner/: README.md
docs/: IPFIX_INTEGRATION.md  README-AWS.md  docset.yml
how-to-test-locally/: README.md  Taskfile.yaml
processors/: __init__.py  ecs.py  factory.py  ie.py  ipfix.py  ipfix_ecs.py  passthrough.py  processor.py  registry.py  utils.py
share/: __init__.py  config.py  data.py  decorator.py  ecs_helper.py  environment.py  events.py  events_from_field.py  expand_event_list_from_field.py  factory.py  include_exlude.py  ipfix_parser.py  json.py  logger.py  multiline.py  parser.py  secretsmanager.py  telemetry.py  utils.py  version.py
shippers/: __init__.py  composite.py  es.py  factory.py  logstash.py  shipper.py  shipperfactory.py
storage/: __init__.py  decorator.py  factory.py  payload.py  s3.py  storage.py  storagefactory.py
tests/: Dockerfile  __init__.py  entrypoint.sh
utils/: data.py
(+128 files in other folders)
