[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend"
crate-type = ["cdylib"]

[dependencies]
convert_case = "0.8.0"
phf = { version = "0.13.1", features = ["macros", "phf_macros", "serde"] }
pyo3 = {version = "0.25.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"

[build-dependencies]
convert_case = "0.8.0"
ron = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
